# music_collection_manager

./: README.md  setup.cfg
music_collection_manager/: __main__.py  models.py  utils.py
