[metadata]
name = music_collection_manager
version = 0.2.0
description = a simple program to manage a music collection and create playlists based on statistics of the user's top tracks from last.fm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nikohonu/music_collection_manager
author = Niko Honu
author_email = nikohonu@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = music_collection_manager
install_requires =
    mutagen
    pylast
    nh_tools
python_requires = >=3.10.1

[options.entry_points]
console_scripts =
    music_collection_manager = music_collection_manager.__main__:main
